@@ -341,37 +341,23 @@ bool wxHTTP::Connect(const wxSockAddress& addr, bool WXUNUSED(wait))
     return true;
 }
 
-bool wxHTTP::BuildRequest(const wxString& path, wxHTTP_Req req)
+bool wxHTTP::BuildRequest(const wxString& path, const wxString& method)
 {
-    const wxChar *request;
-
-    switch (req)
+    // Use the data in the post buffer, if any.
+    if ( !m_postBuffer.IsEmpty() )
     {
-        case wxHTTP_GET:
-            request = wxT("GET");
-            break;
+        wxString len;
+        len << m_postBuffer.GetDataLen();
 
-        case wxHTTP_POST:
-            request = wxT("POST");
-            // Content length must be correct, so always set, possibly
-            // overriding the value set explicitly by a previous call to
-            // SetHeader("Content-Length").
-            if ( !m_postBuffer.IsEmpty() )
-            {
-                wxString len;
-                len << m_postBuffer.GetDataLen();
+        // Content length must be correct, so always set, possibly
+        // overriding the value set explicitly by a previous call to
+        // SetHeader("Content-Length").
+        SetHeader(wxS("Content-Length"), len);
 
-                SetHeader(wxS("Content-Length"), len);
-            }
-
-            // However if the user had explicitly set the content type, don't
-            // override it with the content type passed to SetPostText().
-            if ( !m_contentType.empty() && GetContentType().empty() )
-                SetHeader(wxS("Content-Type"), m_contentType);
-            break;
-
-        default:
-            return false;
+        // However if the user had explicitly set the content type, don't
+        // override it with the content type passed to SetPostText().
+        if ( !m_contentType.empty() && GetContentType().empty() )
+            SetHeader(wxS("Content-Type"), m_contentType);
     }
 
     m_http_response = 0;
@@ -396,15 +382,14 @@ bool wxHTTP::BuildRequest(const wxString& path, wxHTTP_Req req)
     Notify(false);
 
     wxString buf;
-    buf.Printf(wxT("%s %s HTTP/1.0\r\n"), request, path.c_str());
+    buf.Printf(wxT("%s %s HTTP/1.0\r\n"), method, path);
     const wxWX2MBbuf pathbuf = buf.mb_str();
     Write(pathbuf, strlen(pathbuf));
     SendHeaders();
     Write("\r\n", 2);
 
-    if ( req == wxHTTP_POST ) {
-        if ( !m_postBuffer.IsEmpty() )
-            Write(m_postBuffer.GetData(), m_postBuffer.GetDataLen());
+    if ( !m_postBuffer.IsEmpty() ) {
+        Write(m_postBuffer.GetData(), m_postBuffer.GetDataLen());
 
         m_postBuffer.Clear();
     }
@@ -538,7 +523,13 @@ wxInputStream *wxHTTP::GetInputStream(const wxString& path)
         return NULL;
 #endif
 
-    if (!BuildRequest(path, m_postBuffer.IsEmpty() ? wxHTTP_GET : wxHTTP_POST))
+    // Use the user-specified method if any or determine the method to use
+    // automatically depending on whether we have anything to post or not.
+    wxString method = m_method;
+    if (method.empty())
+        method = m_postBuffer.IsEmpty() ? wxS("GET"): wxS("POST");
+
+    if (!BuildRequest(path, method))
         return NULL;
 
     inp_stream = new wxHTTPStream(this);
